--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,13 +3,14 @@ driver:
 
 provisioner:
   name: chef_zero
+  deprecations_as_errors: true
 
 verifier:
   name: inspec
 
 platforms:
   - name: centos-6.8
-  - name: centos-7.2
+  - name: centos-7.3
   - name: debian-7.11
   - name: debian-8.6
   - name: fedora-25
