--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,6 +21,8 @@ platforms:
   - name: opensuse-leap-42.2
   - name: ubuntu-14.04
   - name: ubuntu-16.04
+  - name: freebsd-10
+  - name: freebsd-11
 
 suites:
 - name: resources
