Accepted Chef License in Dokken Kitchen Yaml File
Signed-off-by: John Curcio <johnn.curcio@gmail.com>

--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -9,6 +9,8 @@ transport:
 provisioner:
   name: dokken
   deprecations_as_errors: true
+  client_rb:
+    chef_license: accept
 
 verifier:
   name: inspec
