--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ branches:
 services: docker
 
 env:
+  global:
+  - CHEF_LICENSE="accept-no-persist"
   matrix:
   - INSTANCE=resources-centos-6
   - INSTANCE=resources-centos-7
